--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/after-dark"]
 	path = themes/after-dark
-	url = git@github.com:comfusion/after-dark.git
+	url = https://github.com/comfusion/after-dark.git
